--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,13 @@
             <artifactId>shiro-all</artifactId>
             <version>1.3.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.44</version>
+        </dependency>
+
 
     </dependencies>
 
