--- a/pom.xml
+++ b/pom.xml
@@ -110,11 +110,11 @@
             <version>1.3.2</version>
         </dependency>
         <!-- MQ -->
-        <dependency>
-            <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-all</artifactId>
-            <version>5.14.0</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.apache.activemq</groupId>-->
+<!--            <artifactId>activemq-all</artifactId>-->
+<!--            <version>5.14.0</version>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
