--- a/pom.xml
+++ b/pom.xml
@@ -109,12 +109,36 @@
             <artifactId>shiro-all</artifactId>
             <version>1.3.2</version>
         </dependency>
+        <!--lombok-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <!--sl4j-->
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+
+
         <!-- MQ -->
 <!--        <dependency>-->
 <!--            <groupId>org.apache.activemq</groupId>-->
 <!--            <artifactId>activemq-all</artifactId>-->
 <!--            <version>5.14.0</version>-->
 <!--        </dependency>-->
+        <!--Redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
