--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,21 @@
 #spring.data.mongodb.uri=mongodb://localhost:27017/jimi
 #启动端口
 server.port = 8888
+
+
+#redis
+spring.redis.database=2
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.password=199628@tlw
+spring.session.redis.cleanup-cron= 0 * * * * *
+# 连接超时时间（毫秒）
+spring.redis.timeout=10000
+# 连接池最大连接数（使用负值表示没有限制） 默认 8
+spring.redis.lettuce.pool.max-active=8
+# 连接池最大阻塞等待时间（使用负值表示没有限制） 默认 -1
+spring.redis.lettuce.pool.max-wait=-1
+# 连接池中的最大空闲连接 默认 8
+spring.redis.lettuce.pool.max-idle=8
+# 连接池中的最小空闲连接 默认 0
+spring.redis.lettuce.pool.min-idle=0
