【add】NaCosConfig:增加nacosconfig配置管理

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <nacos.version>0.2.1</nacos.version>
     </properties>
 
     <dependencies>
@@ -29,6 +30,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <!--nacos-config-->
+        <dependency>
+            <groupId>com.alibaba.boot</groupId>
+            <artifactId>nacos-config-spring-boot-starter</artifactId>
+            <version>${nacos.version}</version>
         </dependency>
 
         <dependency>
@@ -54,22 +61,6 @@
             <artifactId>jedis</artifactId>
             <version>3.0.1</version>
         </dependency>
-        <!--导入MongoDB支持-->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-data-mongodb</artifactId>-->
-<!--        </dependency>-->
-        <!--导入MQ依赖-->
-<!--        <dependency>-->
-<!--            <groupId>org.apache.activemq</groupId>-->
-<!--            <artifactId>activemq-core</artifactId>-->
-<!--            <version>5.5.0</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.apache.activemq</groupId>-->
-<!--            <artifactId>activemq-pool</artifactId>-->
-<!--            <version>5.7.0</version>-->
-<!--        </dependency>-->
         <!-- 日志相关依赖 -->
         <dependency>
             <groupId>org.slf4j</groupId>
