--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #spring.data.mongodb.uri=mongodb://localhost:27017/jimi
 #启动端口
 server.port = 8888
-
-
+#nacos路径
+nacos.config.server-addr=127.0.0.1:8848
 #redis
 spring.redis.database=2
 spring.redis.host=127.0.0.1
