【add】nacos服务发现配置管理

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-#spring.data.mongodb.uri=mongodb://localhost:27017/jimi
 #启动端口
 server.port = 8888
-#nacos路径
+#nacos配置地址
 nacos.config.server-addr=127.0.0.1:8848
+#nacos服务发现地址
+nacos.discovery.server-addr=127.0.0.1:8848
+#nacos命名空间
+#nacos.config.namespace=537ce31b-efa4-4b89-a8a0-a2d761c79629
 #redis
 spring.redis.database=2
 spring.redis.host=127.0.0.1
